--- a/index.css
+++ b/index.css
@@ -175,18 +175,18 @@ button {
 }
 
 @media (max-width:812px) {
-    /* * {
+    * {
         font-weight: normal;
-    } */
+    }
 
     p {
-        font-size: 10px;
+        font-size: 12px;
     }
 
     h1,
     h2,
     h3 {
-        font-size: 10px;
+        font-size: 12px;
     }
 
     .menu-bar button,
@@ -202,10 +202,6 @@ button {
         width: 50px;
     }
 
-    .memo .note p {
-        font-weight: bold;
-    }
-
     .area .big-title .title-text {
         font-size: 15px;
         font-weight: bold;
@@ -217,7 +213,7 @@ button {
     }
 
     .memo {
-        padding: 10px;
+        padding: 12px;
     }
 
     #go-home {
@@ -225,7 +221,7 @@ button {
     }
 
     #go-home p {
-        font-size: 8px;
+        font-size: 12px;
     }
 
     .choose:active,
@@ -235,7 +231,7 @@ button {
     }
 
     .qustion .prompt-message {
-        font-size: 10px;
+        font-size: 12px;
 
     }
 }
