--- a/index.css
+++ b/index.css
@@ -32,6 +32,7 @@ html,
 body {
     align-items: center;
     height: 100%;
+    transition: 0.5s ease;
 }
 
 body {
@@ -100,6 +101,7 @@ body {
 .menu-bar button:hover {
     background-color: #f7bb01;
     transition: 0.5s ease;
+    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5);
 }
 
 .memo {
@@ -126,6 +128,7 @@ body {
     background-color: #0f4c81;
     color: #f7bb01;
     border: 2px solid #f7bb01;
+    box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5);
 }
 
 .menu-bar {
@@ -202,6 +205,7 @@ button {
 
     .memo {
         padding: 12px;
+        margin: 20px 3px;
     }
 
     #go-home {
@@ -210,6 +214,10 @@ button {
 
     #go-home p {
         font-size: 15px;
+    }
+
+    .choose {
+        margin: 0 3px;
     }
 
     .qustion .prompt-message {
