--- a/index.css
+++ b/index.css
@@ -170,6 +170,21 @@ body {
     font-size: 15px;
 }
 
+.buttonArea {
+    display: flex;
+}
+
+.buttonArea button {
+    margin: auto 0 auto 20px;
+    padding: 5px 10px;
+    font-size: 15px;
+}
+
+.buttonArea button i {
+    margin: auto 10px auto 0;
+    align-items: center;
+}
+
 button {
     cursor: pointer;
 }
@@ -183,6 +198,91 @@ footer .company-footer {
     text-align: center;
     align-items: center;
     margin: 10px auto 0 auto;
+}
+
+.newsItems {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.newsContent {
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 80%;
+    height: 80%;
+    max-height: 80%;
+    overflow: auto;
+    border-radius: 10px;
+    transition: 0.05s ease-in-out;
+}
+
+.update-dateTime {
+    border-radius: 10px;
+    color: #0f4c81;
+    text-align: center;
+    align-items: center;
+    font-size: 15px
+}
+
+.titleBar {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    background-color: #0f4c81;
+    padding: 10px;
+    border-radius: 10px;
+    color: #fefefe;
+}
+
+.titleBar .titleText {
+    flex: 1;
+    text-align: center;
+}
+
+.newsItems i {
+    padding: 5px;
+    cursor: pointer;
+}
+
+.newsItems i:active {
+    background-color: #f7bb01;
+    border-radius: 5px;
+    color: #0f4c81;
+}
+
+.newsContent .contentItems {
+    padding: auto 10px;
+    margin: 10px 10px;
+}
+
+.newsItems ul {
+    margin: 10px;
+}
+
+.newsItems li {
+    margin: 10px auto;
+    font-size: 16px;
+}
+
+.contentItems .items {
+    margin: 10px auto;
+    padding: 10px;
+}
+
+.contentItems .items h3 {
+    font-size: 18px;
 }
 
 @media (max-width:812px) {
@@ -216,11 +316,7 @@ footer .company-footer {
         margin: 20px 3px 0 3px;
     }
 
-    #go-home {
-        padding: 5px 10px;
-    }
-
-    #go-home p {
+    .buttonArea button p {
         font-size: 15px;
     }
 
@@ -236,6 +332,12 @@ footer .company-footer {
         font-size: 12px;
     }
 
+}
+
+@media (max-width:440px) {
+    .buttonArea button i {
+        display: none;
+    }
 }
 
 @media (max-width:944px) {
