將study123.html的titleBar固定制螢幕最上層，以及消除一些害蟲

--- a/support-conponent/im-support.css
+++ b/support-conponent/im-support.css
@@ -12,6 +12,7 @@
 }
 
 .title-bar {
+
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -138,4 +139,14 @@ i {
 
 .footer-bar a:hover {
   background-color: #f7bb01;
+}
+
+@media (max-width: 685px) {
+  .footer-bar {
+    width: 100%;
+  }
+
+  .footer-bar a {
+    flex: 1;
+  }
 }
