--- a/support-conponent/conponentStyle.css
+++ b/support-conponent/conponentStyle.css
@@ -25,6 +25,7 @@
 }
 
 body {
+  margin-top: 130px;
   display: block;
   justify-content: center;
   align-items: center;
@@ -33,7 +34,13 @@ body {
 
 .title-bar {
   display: flex;
-  margin: 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #0f4c81;
+  z-index: 9999;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .title-bar a {
@@ -109,6 +116,7 @@ body {
 }
 
 .img-item {
+  display: inline;
   flex: 1;
   max-width: 500px;
   margin: 0 auto;
