--- a/support-conponent/im-support.css
+++ b/support-conponent/im-support.css
@@ -11,6 +11,18 @@
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.name-area {
+  display: flex;
+  margin-left: 20px;
+  flex: 1;
+}
+
+.title-bar .logo {
+  width: 50px;
+  height: 50px;
+  align-items: center;
+}
+
 .title-bar {
   align-items: center;
   justify-content: space-between;
@@ -26,10 +38,40 @@
 .title-bar .page-title {
   color: aliceblue;
   display: block;
-  text-align: center;
-  margin: 20px auto;
+  margin: auto 10px;
   text-align: center;
 }
+
+.title-bar {
+  display: flex;
+}
+
+
+.footer-bar {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+  background-color: #0f4c81;
+  padding: 10px 10px;
+}
+
+.footer-bar a {
+  font-size: 20px;
+  color: #0f4c81;
+  text-align: center;
+  color: aliceblue;
+  border: 3px solid aliceblue;
+  font-size: 15px;
+  border-radius: 15px;
+  padding: 10px;
+  margin: auto 10px;
+  font-weight: bold;
+}
+
+.footer-bar a:hover {
+  background-color: #f7bb01;
+}
+
 
 *,
 ::after,
@@ -52,9 +94,6 @@ body {
   background-color: #0f4c81;
 }
 
-.title-bar {
-  display: flex;
-}
 
 .conponent {
   background-color: aliceblue;
@@ -123,32 +162,26 @@ i {
   background-color: aliceblue;
 }
 
-.footer-bar {
-  display: flex;
-  flex-wrap: wrap;
-  align-content: space-between;
-  background-color: #0f4c81;
-  padding: 10px 10px;
-}
-
-.footer-bar a {
-  font-size: 20px;
-  color: #0f4c81;
-  text-align: center;
-  background-color: aliceblue;
-  border-radius: 15px;
-  padding: 10px;
-  margin: auto 10px;
-  font-weight: bold;
-}
-
-.footer-bar a:hover {
-  background-color: #f7bb01;
-}
-
 @media (max-width: 685px) {
   body {
-    margin-top: 150px;
+    margin-top: 135px;
+  }
+
+  .title-bar {
+    padding: 10px auto;
+  }
+
+  .name-area {
+    margin: auto 20px;
+  }
+
+  .name-area .logo {
+    margin: auto;
+    margin-top: 10px;
+  }
+
+  .name-area .page-title {
+    display: none;
   }
 
   .footer-bar {
@@ -157,18 +190,11 @@ i {
 
   .footer-bar a {
     flex: 1;
-    font-size: 18px;
-  }
-
-  .title-bar {
-    padding: 10px auto;
-  }
-
-  .title-bar .page-title {
-    margin: 10px auto;
   }
 
   .conponent {
     margin: 0 20px 20px 20px;
   }
+
+
 }
