--- a/support-conponent/conponentStyle.css
+++ b/support-conponent/conponentStyle.css
@@ -183,6 +183,11 @@ ol li {
 @media (max-width: 660px) {
   .title-bar .page-title {
     text-align: left;
+    margin: 15px;
+  }
+
+  .title-bar {
+    padding: 0 20px;
   }
 
   .img-item img {
@@ -195,5 +200,9 @@ ol li {
 
   .ntroduce-link {
     font-size: 15px;
+  }
+
+  body {
+    margin-top: 120px;
   }
 }
