--- a/support-conponent/conponentStyle.css
+++ b/support-conponent/conponentStyle.css
@@ -40,6 +40,7 @@ body {
   z-index: 9999;
   padding-left: 20px;
   padding-right: 20px;
+  box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5);
 }
 
 .title-bar a {
@@ -91,7 +92,7 @@ body {
   background-color: aliceblue;
   padding: 20px;
   border-radius: 15px;
-  box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5); */
   margin: 20px;
 }
 
@@ -183,11 +184,11 @@ ol li {
 @media (max-width: 660px) {
   .title-bar .page-title {
     text-align: left;
-    margin: 15px;
+    margin: 0 15px;
   }
 
   .title-bar {
-    padding: 0 20px;
+    padding: 10px;
   }
 
   .img-item img {
