--- a/support-conponent/im-support.css
+++ b/support-conponent/im-support.css
@@ -33,6 +33,7 @@
   width: 100%;
   background-color: #0f4c81;
   z-index: 9999;
+  box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5);
 }
 
 .title-bar .page-title {
@@ -100,7 +101,7 @@ body {
   padding: 20px;
   border-radius: 15px;
   margin: 20px;
-  box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 0px 0px 50px -10px rgba(0, 0, 0, 0.5); */
 }
 
 .title {
@@ -164,20 +165,21 @@ i {
 
 @media (max-width: 685px) {
   body {
-    margin-top: 135px;
+    margin-top: 90px;
   }
 
   .title-bar {
     padding: 10px auto;
+    display: flex;
   }
 
   .name-area {
     margin: auto 20px;
+    flex: none;
   }
 
   .name-area .logo {
     margin: auto;
-    margin-top: 10px;
   }
 
   .name-area .page-title {
@@ -185,7 +187,9 @@ i {
   }
 
   .footer-bar {
-    width: 100%;
+    flex: 1;
+    padding: 10px auto;
+    padding-right: 10px;
   }
 
   .footer-bar a {
