【視覺優化】 CSS調整，並因應新年開始，版權文字更新為2024版且加入 By MIS 字樣 【系統命名異動】 統整img及webp還有mp4資料夾，拋棄conponent資料夾，建立media資料夾，將所有影音檔轉存至media

--- a/css/category_Study123.css
+++ b/css/category_Study123.css
@@ -181,6 +181,13 @@ ol li {
   margin: auto 5px auto auto;
 }
 
+footer .company-footer {
+  color: white;
+  text-align: center;
+  align-items: center;
+  margin: 10px auto 20px auto;
+}
+
 @media (max-width: 660px) {
   .title-bar .page-title {
     text-align: left;
