【視覺優化】 UIUX優化

--- a/css/index.css
+++ b/css/index.css
@@ -207,6 +207,10 @@ footer .company-footer {
     display: none;
   }
 
+  footer .company-footer {
+    font-size: 12px;
+  }
+
   .conponent {
     margin: 0 20px 20px 20px;
   }
