--- a/css/category_Study123.css
+++ b/css/category_Study123.css
@@ -115,6 +115,12 @@ body {
   margin: 10px;
 }
 
+span.title {
+  border-bottom: 2px solid #0f4c81;
+  padding: 5px;
+  margin: auto 10px;
+}
+
 .img-item {
   display: inline;
   flex: 1;
@@ -191,7 +197,7 @@ footer .company-footer {
 @media (max-width: 660px) {
   .title-bar .page-title {
     text-align: left;
-    margin: 0 15px;
+    margin: auto 10px;
   }
 
   .title-bar {
@@ -208,6 +214,10 @@ footer .company-footer {
 
   .ntroduce-link {
     font-size: 15px;
+  }
+
+  footer .company-footer {
+    font-size: 12px;
   }
 
   body {
