--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300&family=Open+Sans:wght@300;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@200;300;400&display=swap');
 
 * {
   margin: 0;
   padding: 0;
-  list-style: none;
-  font-family: "Noto Sans TC", sans-serif;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
     border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
